添加了删除字段，以及一些注释

--- a/src/main/resources/generator/config.properties
+++ b/src/main/resources/generator/config.properties
@@ -2,6 +2,6 @@ jdbc.url=jdbc:mysql://47.96.12.239:3306/blog-test
 jdbc.user=root
 jdbc.password=751842781-Yubing
 
-table.name=article_tag
-entity.name=ArticleTagDO
-mapper.name=ArticleTagMapper
+table.name=article
+entity.name=ArticleDO
+mapper.name=ArticleMapper
