--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,10 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
         </plugins>
 
         <pluginManagement>
