--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
+
+
 blog:
   article:
     file-base-path: /root/article
     save-at-local: true
+
+mybatis:
+  mapper-locations: classpath:/mybatis/**/*.xml
